big ynmp accuracy post draft

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
-
-    <!--<link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>-->
     <link href='/fonts/droid_serif.css' rel='stylesheet' type='text/css'>
     <link href='/fonts/droid_sans.css' rel='stylesheet' type='text/css'>
     <link href='/fonts/roboto_slab.css' rel='stylesheet' type='text/css'>
