--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ css: main.css
 
 <div class="container post">
   <div class="row">
-    <div class="col-md-2 sidebar">
+    <div class="col-md-2">
       <div class='logoface_small'>
         <a href='/'>Tim Green</a>
       </div>
