--- a/css/main.scss
+++ b/css/main.scss
@@ -1,189 +1,6 @@
 @import "default.scss";
+@import "posts.scss";
+@import "pages.scss";
+@import "footer.scss";
+@import "front_page.scss";
 
-html {
-  font-size: 14px;
-}
-
-body {
-  margin-top:5rem;
-  font-family: $header_font;
-  font-size: 1rem;
-}
-
-.index {
-  margin-bottom:10rem;
-}
-
-.container {
-  min-height:768px;
-}
-
-ul#leftnav {
-    margin: 0;
-    margin-top: 2em;
-    padding: 0;
-    list-style: none;
-
-    li {
-        a:link {
-            display: block;
-            padding: 1em;
-            background: #E0F0FA;
-            border-radius: 5px;
-            color: #517DA3;
-            text-decoration: none;
-            text-align: center;
-            margin-bottom: 1em;
-        }
-    }
-}
-
-ul.links {
-  padding:0;
-  margin: 0;
-  margin-bottom: 1rem;
-  list-style: none;
-
-  li {
-    display: inline;
-    float: left;
-
-    a {
-      display: block;
-      padding: 1rem;
-    }
-  }
-}
-
-ul.github {
-  list-style:none;
-  padding:0;
-
-  li {
-    a.link {
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border: 1px solid #eee;
-      display: block;
-      background: $color_highlight;
-    }
-  }
-}
-
-.logoface {
-  text-align: center;
-
-  img.my_face {
-    border-radius:5rem;
-    width:10rem;
-  }
-}
-
-.logoface_small {
-  font-size: 2rem;
-  font-weight: 300;
-
-  img.my_face {
-    border-radius:2rem;
-    width:4rem;
-    margin-right:1rem;
-  }
-}
-
-h1 {
-  font-size: 5rem;
-  margin-top: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-p.block-highlight {
-  background: $grey_highlight;
-  color: #003;
-  padding:10px;
-  border-radius:5px;
-}
-
-ul.publications {
-  list-style:none;
-  padding:0;
-
-  li {
-    margin-bottom:20px;
-    font-size:1.0em;
-
-    span.me {
-      text-decoration: underline;
-    }
-  }
-}
-
-.col-right {
-  text-align: center;
-
-  address {
-    text-align: right;
-    border: 1px solid #eee;
-    display: inline-block;
-    padding: 10px
-  }
-}
-
-div.logotype {
-  line-height:40px;
-
-  p {  
-    font-size:40px;
-    padding:0;
-    margin:0;
-    font-family: $header_font;
-    font-weight:bold;
-  
-    a:link, a:visited {
-      color:black;
-      text-decoration:none;
-    }
-  }
-
-  img {
-    height:40px;
-  }
-}
-
-img.thesis_front {
-  border:1px solid #eee;
-  box-shadow: 2px 2px 1px #dddddd;
-}
-
-div.post {
-    h1 {
-        border-bottom: 4px solid #FF0064;
-        margin-bottom: 4rem;
-    }
-
-    h1, h2, h3, h4, h5, p, ul, table, div.highlight, iframe {
-        width: 100%;
-    }
-
-    @media (min-width: 1024px) {
-        h1, h2, h3, h4, h5, p, ul, table, div.highlight, iframe {
-            width: 70%;
-            margin-left: 5%;
-        }
-    }
-
-    table {
-        border-collapse: collapse;
-        margin-top: 1.5rem;
-        margin-bottom: 2rem;
-
-        &.wide {
-            width: 90%;
-            margin-left: 0;
-        }
-
-        td, th {
-            border: 1px solid #ccc;
-            padding: 0.5rem 1rem;
-        }
-    }
-}
