d3 charts for ynmp post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="/css/syntax.css" />
 
     <link rel="shortcut icon" type="image/png" href="/images/my_face.jpg"/>
+
+    <script type='text/javascript' src='/js/jquery-2.1.4.min.js'></script>
+    <script type='text/javascript' src='/js/d3.v3.min.js'></script>
+    <script type='text/javascript' src='/js/charts.js'/></script>
   </head>
   <body>
 <!-- Google Tag Manager -->
