--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,23 @@ div.post table {
   div.post table td, div.post table th {
     border: 1px solid #ccc;
     padding: 0.5rem 1rem; }
+div.post div.barchart {
+  width: 75%;
+  height: 300px; }
+  div.post div.barchart svg path.line {
+    fill: none;
+    stroke: #333;
+    stroke-width: 2; }
+  div.post div.barchart svg path.line-1 {
+    stroke: #F66; }
+  div.post div.barchart svg path.line-2 {
+    stroke: #66F; }
+  div.post div.barchart svg path.domain {
+    fill: none;
+    stroke: #999; }
+  div.post div.barchart svg rect.bar {
+    fill: #3D83FB;
+    stroke: none; }
 
 .page img.thesis_front {
   border: 1px solid #eee;
