update magres python section

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -17,59 +17,56 @@ MathJax.Hub.Config({
   <a href='/'>Tim Green</a> / MagresPython
 </div></div>
 
-<div class="magres_heder"><div class="container">
-<div class="col-md-6 col-md-offset-3 inner">
-<!--<a href='/magres-python/install/' class='btn btn-default'>install</a>-->
-<h1>The MagresPython library</h1>
+<div class="magres_heder">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3"><div class="inner">
+                <h1>MagresPython</h1>
+            </div></div>
+        </div>
+    </div>
 </div>
-</div></div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-3 sidebar">
-        <!--<h3>Documentation</h3>-->
-        <ul>
-          <li><a class='link' href='/magres-python/'>Introduction</a></li>
-          <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
-          <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li>
-          <li class='group'>Tutorials
-            <ul>
-              <!--<li><a class='link' href='/magres-python/tutorials/introduction/'>Introduction</a></li>-->
-              <!--<li><a class='link' href='/magres-python/tutorials/atoms/'>Atoms</a></li>-->
-              <li><a class='link' href='/magres-python/tutorials/structural/'>Distances and angles</a></li>
-              <!--<li><a class='link' href='/magres-python/tutorials/bonding/'>Bonding</a></li>
-              <li><a class='link' href='/magres-python/tutorials/cs/'>Chemical shifts</a></li>
-              <li><a class='link' href='/magres-python/tutorials/efg/'>Electric field gradients</a></li>
-              <li><a class='link' href='/magres-python/tutorials/jc/'>J-coupling</a></li>-->
-              <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>
-            </ul>
-          </li>
-          <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
-        </ul>
-      </div>
-      <div class="col-md-6 content">
-      {{ content }}
+    <div class="row">
+        <div class="col-md-3">
+            <div class="sidebar">
+                <ul>
+                    <li><a class='link' href='/magres-python/'>Introduction</a></li>
+                    <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
+                    <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li>
+                    <li class='group'>Tutorials
+                        <ul>
+                            <!--<li><a class='link' href='/magres-python/tutorials/introduction/'>Introduction</a></li>-->
+                            <!--<li><a class='link' href='/magres-python/tutorials/atoms/'>Atoms</a></li>-->
+                            <li><a class='link' href='/magres-python/tutorials/structural/'>Distances and angles</a></li>
+                            <!--<li><a class='link' href='/magres-python/tutorials/bonding/'>Bonding</a></li>
+                            <li><a class='link' href='/magres-python/tutorials/cs/'>Chemical shifts</a></li>
+                            <li><a class='link' href='/magres-python/tutorials/efg/'>Electric field gradients</a></li>
+                            <li><a class='link' href='/magres-python/tutorials/jc/'>J-coupling</a></li>-->
+                            <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>
+                        </ul>
+                    </li>
+                    <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="content">
+                {{ content }}
+            </div>
+        </div>
     </div>
-    <div class="col-md-3">
-    </div>
-  </div>
 </div>
 <div class="container-fluid">
-  <div class="row footer">
-    <div class='col-md-6 footer-left'>
-      <p><a href='mailto:timothy.green@gmail.com'>timothy.green@gmail.com</a></p>
-      <p><a href='http://twitter.com/tfgg2' target="_blank">Twitter @tfgg2</a></p>
-      <p><a href='http://github.com/tfgg' target='_blank'>Github tfgg</a></p>
+    <div class="row footer">
+        <div class='col-md-6 footer-left'>
+            <p><a href='mailto:timothy.green@gmail.com'>timothy.green@gmail.com</a></p>
+            <p><a href='http://twitter.com/tfgg2' target="_blank">Twitter @tfgg2</a></p>
+            <p><a href='http://github.com/tfgg' target='_blank'>Github tfgg</a></p>
+        </div>
+        <div class='col-md-6 footer-right'>
+        </div>
     </div>
-    <div class='col-md-6 footer-right'>
-      <address>
-      Department of Materials<br/>
-      University of Oxford<br/>
-      Parks Road<br/>
-      Oxford OX1 3PH<br/>
-      UK
-      </address>
-    </div>
-  </div>
 </div>
 
