--- a/css/magres.css
+++ b/css/magres.css
@@ -1,18 +1,10 @@
-.footer {
-  margin-top: 50px;
-  background: #333;
-  color: white;
-  font-family: "Droid Sans", sans-serif; }
-  .footer .footer-left {
-    padding-top: 20px;
-    padding-bottom: 100px;
-    text-align: right; }
-  .footer .footer-right {
-    padding-top: 20px;
-    padding-bottom: 100px;
-    text-align: left; }
-  .footer a:link, .footer a:visited {
-    color: white; }
+html {
+  font-size: 14px; }
+
+body {
+  margin-top: 5rem;
+  font-family: "Roboto Slab", serif;
+  font-size: 1rem; }
 
 a {
   color: #428bca; }
@@ -25,19 +17,64 @@ a {
     text-decoration: underline; }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Droid Sans", sans-serif; }
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+  text-rendering: geometricPrecision; }
 
 h1 {
-  font-weight: bold; }
+  font-size: 5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem; }
 
-p, address {
-  font-family: "Droid Serif", serif; }
+h1:first-child {
+  margin-top: 0em; }
+
+h2 {
+  font-size: 2.5rem; }
+
+h3 {
+  font-size: 1.5rem; }
+
+p, address, ul, td {
+  font-family: "Helvetica", sans-serif;
+  line-height: 2.5rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-bottom: 2rem; }
 
 article p {
   text-align: justify; }
 
 strong, bold {
   font-weight: 700; }
+
+div.logoface_small {
+  font-size: 2rem;
+  font-weight: 300; }
+  div.logoface_small img.my_face {
+    border-radius: 2rem;
+    width: 4rem;
+    margin-right: 1rem; }
+
+.footer {
+  margin-top: 50px;
+  background: #333;
+  color: white;
+  font-family: "Roboto Slab", serif; }
+  .footer p {
+    margin-bottom: 0.5rem; }
+  .footer .footer-left {
+    padding-top: 20px;
+    padding-bottom: 100px;
+    text-align: right; }
+  .footer .footer-right {
+    padding-top: 20px;
+    padding-bottom: 100px;
+    text-align: left; }
+  .footer a:link, .footer a:visited {
+    color: white; }
 
 body {
   margin-top: 0; }
@@ -51,11 +88,18 @@ a:visited {
 a:active {
   color: #8b2929; }
 
-.content h1:first-child, .content h2:first-child, .content h3:first-child, .content h4:first-child, .content h5:first-child {
-  margin-top: 0; }
+.content {
+  padding: 4rem; }
+  .content p {
+    line-height: 2; }
+  .content h1, .content h2, .content h3, .content h4, .content h5 {
+    margin-bottom: 1em; }
+    .content h1:first-child, .content h2:first-child, .content h3:first-child, .content h4:first-child, .content h5:first-child {
+      margin-top: 0rem; }
 
 .sidebar {
-  text-align: center; }
+  text-align: center;
+  padding-top: 4rem; }
   .sidebar h1 {
     margin-top: 0; }
   .sidebar h3 {
@@ -95,13 +139,13 @@ a:active {
 .magres_heder {
   background: url("/images/magres_heder.png");
   background-color: #C53B3B;
-  padding: 10px;
   margin-bottom: 20px;
   color: white; }
   .magres_heder .inner h1 {
-    margin-top: 120px;
-    font-size: 40px;
-    line-height: 50px; }
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    line-height: 2;
+    padding-left: 4rem; }
 
 code[data-lang="text"]:parent {
   background: none;
