--- a/css/magres.scss
+++ b/css/magres.scss
@@ -1,4 +1,5 @@
 @import "default.scss";
+@import "footer.scss";
 
 $color_highlight: #C53B3B;
 $link_color: darken($color_highlight, 15%);
@@ -26,15 +27,24 @@ a {
 }
 
 .content {
+  padding: 4rem;
+
+  p {
+    line-height: 2;
+  }
+
   h1, h2, h3, h4, h5 {
+    margin-bottom:1em;
+
     &:first-child {
-      margin-top:0;
+      margin-top:0rem;
     }
   }
 }
 
 .sidebar {
   text-align:center;
+  padding-top: 4rem;
 
   h1 {
     margin-top:0;
@@ -102,15 +112,15 @@ a {
 .magres_heder {
   background:url('/images/magres_heder.png');
   background-color: $color_highlight;
-  padding:10px;
   margin-bottom:20px;
   color:white;
 
   .inner {
     h1 {
-      margin-top: 120px;
-      font-size:40px;
-      line-height:50px;
+      margin-top: 5rem;
+      margin-bottom: 2rem;
+      line-height: 2;
+      padding-left: 4rem;
     }
   }
 }
