--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -47,7 +47,7 @@ MathJax.Hub.Config({
                             <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>
                         </ul>
                     </li>
-                    <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
+                    <li><a class='external' href='https://github.com/tfgg/magres-format'><i class='fa fa-github'></i> Available on Github</a></li>
                 </ul>
             </div>
         </div>
