--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
                     <li class='group'>Tutorials
                         <ul>
                             <!--<li><a class='link' href='/magres-python/tutorials/introduction/'>Introduction</a></li>-->
-                            <!--<li><a class='link' href='/magres-python/tutorials/atoms/'>Atoms</a></li>-->
+                            <li><a class='link' href='/magres-python/tutorials/atoms/'>Selecting atoms</a></li>
                             <li><a class='link' href='/magres-python/tutorials/structural/'>Distances and angles</a></li>
                             <!--<li><a class='link' href='/magres-python/tutorials/bonding/'>Bonding</a></li>
                             <li><a class='link' href='/magres-python/tutorials/cs/'>Chemical shifts</a></li>
