--- a/css/magres.css
+++ b/css/magres.css
@@ -44,6 +44,9 @@ p, address, ul, td {
   font-weight: 300;
   margin-bottom: 2rem; }
 
+p {
+  margin-top: 2rem; }
+
 article p {
   text-align: justify; }
 
