--- a/css/front_page.scss
+++ b/css/front_page.scss
@@ -3,20 +3,20 @@ div.front_page {
 
     ul#leftnav {
         margin: 0;
-        margin-top: 2em;
+        margin-top: 2rem;
         padding: 0;
         list-style: none;
 
         li {
             a:link {
                 display: block;
-                padding: 1em;
+                padding: 1rem;
                 background: #E0F0FA;
                 border-radius: 0.25rem;
                 color: #517DA3;
                 text-decoration: none;
                 text-align: center;
-                margin-bottom: 1em;
+                margin-bottom: 1rem;
             }
         }
     }
@@ -75,6 +75,20 @@ div.front_page {
 
       li {
         font-size:1.0em;
+        margin-bottom: 2rem;
+
+        div.name {
+            font-size: 1.4rem; 
+        }
+
+        div.journal {
+
+        }
+
+        div.authors {
+            color: #666;
+            font-size: 1.0rem;
+        }
 
         span.me {
           text-decoration: underline;
