--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     <script type='text/javascript' src='/js/jquery-2.1.4.min.js'></script>
     <script type='text/javascript' src='/js/d3.v3.min.js'></script>
-    <script type='text/javascript' src='/js/charts.js'/></script>
+    <script type='text/javascript' src='/js/charts.js'></script>
   </head>
   <body>
 <!-- Google Tag Manager -->
